--- a/client/src/Components/VideoGameCard/VideogameCard.module.css
+++ b/client/src/Components/VideoGameCard/VideogameCard.module.css
@@ -1,21 +1,28 @@
 .card {
     font-family: 'Press Start 2P', cursive;
-    color: fuchsia;
-    font-size: 0.9rem;
-    background-color: rgba(9, 246, 223, 0.754); /* Fondo transparente */
+   
+    background-color: rgba(84, 246, 9, 0.754); 
     padding: 10px 20px;
-    border-radius: 10px; /* Borde redondeado */
-    box-shadow: 0px 0px 5px 1px rgba(247, 243, 247, 0.58); /* Sombra blanca */
+    border-radius: 10px; 
+    border-color: solid rgb(251, 255, 0);
+    box-shadow: 0px 0px 5px 1px rgba(249, 249, 3, 0.58); 
     flex: 0 0 calc(33.33% - 10px);
     margin-bottom: 20px;
-    box-sizing: border-box;
+
   }
 
   .cardName {
-    font-size: 1rem;
+    color: rgb(187, 8, 187);
+    text-shadow: 2px 2px rgb(11, 11, 0);
+    font-size: 1.2rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+  }
+ 
+  .rating, .genres, .genre{
+    color: rgb(255, 0, 51);
+    text-shadow: 2px 2px rgb(11, 11, 0);
   }
 
  
