--- a/client/src/Components/Home/Home.module.css
+++ b/client/src/Components/Home/Home.module.css
@@ -1,7 +1,32 @@
-
 .cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0 70px; 
+  justify-content: space-around;
+  padding: 0 15px; 
+  margin-bottom: -3rem;
+}
+
+.filter{
+  margin-top: 3rem;
+  margin-right: 32.5rem;
+  margin-bottom: 3rem;
+  color: rgb(242, 250, 5);
+  text-shadow: 2px 2px rgb(1, 14, 10);
+  font-family: 'Press Start 2P', cursive;
+ font-size: 13px;
+}
+
+.orden, .rating,.genero{
+  margin-right: 0.9rem;
+}
+
+
+
+.select{
+  width: 6rem;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 0.6rem;
+  background-color: rgba(71, 249, 6, 0.5);
+  border-color: rgb(255, 0, 85);
+  text-align: center;
 }
