--- a/client/src/Components/VideoGameCard/VideogameCard.module.css
+++ b/client/src/Components/VideoGameCard/VideogameCard.module.css
@@ -1,28 +1,59 @@
 .card {
-    font-family: 'Press Start 2P', cursive;
-   
-    background-color: rgba(84, 246, 9, 0.754); 
-    padding: 10px 20px;
-    border-radius: 10px; 
-    border-color: solid rgb(251, 255, 0);
-    box-shadow: 0px 0px 5px 1px rgba(249, 249, 3, 0.58); 
-    flex: 0 0 calc(33.33% - 10px);
-    margin-bottom: 20px;
+  width: 15 rem;
+  font-family: 'Press Start 2P', cursive;
+  background-color: rgba(84, 246, 9, 0.754); 
+  padding: 10px 20px;
+  border-radius: 10px; 
+  border-color: solid rgb(251, 255, 0);
+  box-shadow: 0px 0px 5px 1px rgba(249, 249, 3, 0.58); 
+  flex: 0 0 calc(33.33% - 10px);
+  margin-bottom: 7rem;
+  display: flex;
+  flex-direction: column;
+}
 
-  }
+.cardName {
+  color: rgb(187, 8, 187);
+  text-shadow: 2px 2px rgb(11, 11, 0);
+  font-size: 1.2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 
-  .cardName {
-    color: rgb(187, 8, 187);
-    text-shadow: 2px 2px rgb(11, 11, 0);
-    font-size: 1.2rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
- 
-  .rating, .genres, .genre{
-    color: rgb(255, 0, 51);
-    text-shadow: 2px 2px rgb(11, 11, 0);
-  }
+.cardTitle {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 0.1rem;
+  color: rgb(255, 255, 65);
+  text-shadow: 2px 2px rgb(11, 11, 0);
+  text-decoration: none;
+  border-bottom: none;
+}
 
- 
+.rating {
+  margin-right: 1rem;
+}
+
+.genres {
+  margin-right: 1rem;
+}
+
+.genre {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-right: -0.5rem;
+  margin-bottom: -0.1rem;
+  text-decoration: none;
+  border-bottom: none;
+}
+
+.genre h5 {
+  color: rgb(246, 166, 67);
+  text-shadow: 2px 2px rgb(11, 11, 0);
+  margin-right: 1.3rem;
+  margin-bottom: 0.5rem;
+}
