--- a/client/src/Components/VideoGameDetail/VideoGameCard.module.css
+++ b/client/src/Components/VideoGameDetail/VideoGameCard.module.css
@@ -1,4 +1,36 @@
-.img{
-    margin-top: 2rem;
+.container {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    font-family: 'Press Start 2P', cursive;
+  }
+  
+  .img {
+     margin-top:5rem ;
+     margin-left: 1rem;
     width: 40rem;
+    border-radius: 5%;
+    box-shadow: 10px 10px rgb(245, 3, 241);
+  }
+
+  .name{
+    margin-top: 5rem;
+    font-size: 0.8rem;
+    color: rgb(255, 247, 0);
+    text-shadow: 3px 3px rgb(244, 11, 248); 
+  }
+  
+.description{
+    font-size: 0.9rem;
+    color: rgb(243, 140, 15);
+    text-shadow: 1px 1px rgb(11, 10, 11);
+
 }
+.released, .rating, .title, .elements{
+    margin-top: 3rem;
+    font-size: 0.8rem;
+    color: rgb(21, 255, 0);
+    text-shadow: 3px 3px rgb(8, 7, 8); 
+}
+
+
