--- a/client/src/Components/VideoGameDetail/VideoGameCard.module.css
+++ b/client/src/Components/VideoGameDetail/VideoGameCard.module.css
@@ -33,4 +33,43 @@
     text-shadow: 3px 3px rgb(8, 7, 8); 
 }
 
+.btn{
+    margin-bottom: 45rem;
+    display: flex;
+    justify-content: flex-start;
+    font-size: 0.8rem; 
+    text-shadow: 1px 1px gray; 
+    font-family: 'Press Start 2P', cursive;
+    color: lightgreen;
+    text-shadow: 2px 2px rgb(1, 14, 10);
+    position: relative;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    background-color: transparent;
+    border: 2px solid rgb(15, 230, 90);
+    }
+    
+    .btn:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(247, 247, 42);
+        opacity: 0.5;
+        z-index: -1;
+        transition: transform 0.2s ease-in-out;
+        transform: scale(0.9);
+    }
+    
+    .btn:hover:before {
+        transform: scale(1);
+    }
+    
+    .btn:active:before {
+        transform: scale(0.8);
+    }
+
+
 
