--- a/client/src/Components/VideoGameDetail/VideoGameCard.module.css
+++ b/client/src/Components/VideoGameDetail/VideoGameCard.module.css
@@ -1,3 +1,85 @@
+.all{
+    /* background-color: rgb(99, 23, 169);
+    background: linear-gradient(to bottom, #9400d3, #00d5ff); */
+    font-family: 'Press Start 2P', cursive;
+}
+
+.bloque1{
+    display: flex;
+    justify-content: space-around;
+}
+
+.bloque2{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 3rem;
+}
+
+.img {
+    margin-top: 3rem;
+   width: 30rem;
+   border-radius: 5%;
+   box-shadow: 10px 10px rgb(245, 3, 241);
+ }
+
+ .description{
+    margin-top: 2rem;
+    width: 48rem;
+    font-size: 0.9rem;
+    color: rgb(243, 137, 15);
+    text-shadow: 1px 1px rgb(11, 10, 11);
+ }
+
+ .name{
+    margin-top: 3rem;
+    font-size: 1.8rem;
+    color: rgb(255, 247, 0);
+    text-shadow: 3px 3px rgb(244, 11, 248); 
+ }
+
+.subBloque2{
+    margin-top: -4rem;
+    margin-left: 2rem;
+    display: flex;
+}
+
+.title{
+    font-size: 1rem;
+    color:rgb(244, 11, 248);
+    text-shadow: 2px 2px rgb(244, 252, 3); 
+}
+
+.value, .divElement{
+    font-size: 0.9rem;
+    color: rgb(68, 243, 15);
+    text-shadow: 2px 2px rgb(11, 10, 11);
+}
+
+.subBloque3, .subBloque4{
+    display: flex;
+}
+
+.btn{
+    margin-top: -8rem;
+    margin-left: 9rem;
+    font-size: 0.8rem; 
+    text-shadow: 1px 1px gray; 
+    font-family: 'Press Start 2P', cursive;
+    color: rgb(244, 11, 248);
+    text-shadow: 2px 2px rgb(251, 238, 3);
+    position: relative;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    background-color: rgba(247, 247, 20, 0.493);
+    border: 2px solid rgb(244, 11, 248);
+    }
+
+
+/* .all{
+    background-color: rgb(99, 23, 169);
+}
+
 .container {
     display: flex;
     align-items: center;
@@ -69,7 +151,7 @@
     
     .btn:active:before {
         transform: scale(0.8);
-    }
+    } */
 
 
 
