--- a/client/src/Components/Home/Home.module.css
+++ b/client/src/Components/Home/Home.module.css
@@ -3,7 +3,6 @@
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 0 15px; 
-  margin-bottom: -3rem;
 }
 
 .filter{
@@ -13,19 +12,20 @@
   color: rgb(242, 250, 5);
   text-shadow: 2px 2px rgb(1, 14, 10);
   font-family: 'Press Start 2P', cursive;
- font-size: 13px;
+ font-size: 10px;
+ display: inline;
 }
 
 .orden, .rating,.genero{
-  margin-right: 0.9rem;
+  margin-right: 2rem;
 }
 
 
 
 .select{
-  width: 6rem;
+  padding: 10px 5px;
   font-family: 'Press Start 2P', cursive;
-  font-size: 0.6rem;
+  font-size: 0.5rem;
   background-color: rgba(71, 249, 6, 0.5);
   border-color: rgb(255, 0, 85);
   text-align: center;
