--- a/client/src/Components/SearchBar/SearchBar.module.css
+++ b/client/src/Components/SearchBar/SearchBar.module.css
@@ -4,7 +4,7 @@
   margin-top: -2rem;
 } 
 
-.buttonSearch {
+.buttonSearch, button, a {
     margin-top: 0.01rem;
     font-size: 0.8rem; 
     text-shadow: 1px 1px rgb(254, 8, 131); 
@@ -15,29 +15,13 @@
     cursor: pointer;
     padding: 0.5rem 1rem;
     background-color: transparent;
-    border: 2px solid rgb(250, 6, 136);
+    border: none;
 }
 
-.buttonSearch:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(255, 2, 95);
-    opacity: 0.5;
-    z-index: -1;
-    transition: transform 0.2s ease-in-out;
+
+
+.buttonSearch:hover, button:hover, a:hover {
     transform: scale(0.9);
-}
-
-.buttonSearch:hover:before {
-    transform: scale(1);
-}
-
-.buttonSearch:active:before {
-    transform: scale(0.8);
 }
 
 .input{
@@ -45,8 +29,8 @@
     width: 20rem;
     font-family: 'Press Start 2P', cursive;
     font-size: 0.7rem;
-    background-color: rgba(249, 6, 131, 0.5);
-    border-color: rgb(255, 0, 85);
+    background-color: rgba(225, 115, 172, 0.5);
+    border-color: rgb(84, 4, 57);
 }
 
 .input::placeholder{
